@@ -490,4 +490,4 @@ For example with lighttpd:
 Please refer to the project site http://iipimage.sourceforge.net for further details
 
 ------------------------------------------------------------------------------------
-(c) 2000-2016 Ruven Pillay <ruven@users.sourceforge.net>
+(c) 2000-2018 Ruven Pillay <ruven@users.sourceforge.net>
