@@ -1,24 +1,18 @@
 ﻿
 Microsoft Visual Studio Solution File, Format Version 11.00
-# Visual Studio 2010
+# Visual C++ Express 2010
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "iipsrv", "iipsrv.vcxproj", "{18F529A3-258B-40C9-986C-57826894DD0B}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Win32 = Debug|Win32
-		Debug|x64 = Debug|x64
 		Release|Win32 = Release|Win32
-		Release|x64 = Release|x64
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
 		{18F529A3-258B-40C9-986C-57826894DD0B}.Debug|Win32.ActiveCfg = Debug|Win32
 		{18F529A3-258B-40C9-986C-57826894DD0B}.Debug|Win32.Build.0 = Debug|Win32
-		{18F529A3-258B-40C9-986C-57826894DD0B}.Debug|x64.ActiveCfg = Release|x64
-		{18F529A3-258B-40C9-986C-57826894DD0B}.Debug|x64.Build.0 = Release|x64
 		{18F529A3-258B-40C9-986C-57826894DD0B}.Release|Win32.ActiveCfg = Release|Win32
 		{18F529A3-258B-40C9-986C-57826894DD0B}.Release|Win32.Build.0 = Release|Win32
-		{18F529A3-258B-40C9-986C-57826894DD0B}.Release|x64.ActiveCfg = Release|x64
-		{18F529A3-258B-40C9-986C-57826894DD0B}.Release|x64.Build.0 = Release|x64
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
